--- a/.github/workflows/train.yaml
+++ b/.github/workflows/train.yaml
@@ -11,7 +11,7 @@ jobs:
         env:
           REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-           pip install -r equirements.txt
+           pip install -r requirements.txt
            dvc repro
            
            git fetch --prune
