--- a/.github/workflows/train.yaml
+++ b/.github/workflows/train.yaml
@@ -1,10 +1,10 @@
-name: your-workflow-name
+name: farmers
 on: [push]
 jobs:
   run:
     runs-on: ubuntu-latest
     # optionally use a convenient Ubuntu LTS + DVC + CML image
-    container: ghcr.io/iterative/cml:0-dvc2-base1
+    container: docker://dvcorg/cml-py3:latest
     steps:
       - uses: actions/checkout@v3
       - name: CML_run
@@ -12,6 +12,7 @@ jobs:
           REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
            pip install -r requirements.txt
+           dvc init
            dvc repro
            
            git fetch --prune
