--- a/.github/workflows/train.yaml
+++ b/.github/workflows/train.yaml
@@ -13,13 +13,16 @@ jobs:
         run: |
            pip install -r requirements.txt
            dvc init
+           wget https://ars.els-cdn.com/content/image/1-s2.0-S2352340920303048-mmc1.zip
+           vi data.zip
+           mv 1-s2.0-S2352340920303048-mmc1.zip data.zip
            dvc repro
            
            git fetch --prune
            dvc metrics diff --show-md master > report.md
            
            # Add figure to the report
-           echo "## Validating results by the region" > 
+           echo "## Validating results by the region" 
            cml-publish by_region.png --md >> report.md
            cml-send-comment report.md
            
